examples/pos/issue603/issue603_3.effekt
effect simple(): Unit

interface Bi {
  def foo(): Unit / { simple }
}

def test(): Bi at {} = box new Bi {
  def foo() = do simple()
}

def main() = {}
