examples/neg/extern_handled.effekt
interface Foo {
  def foo(): Unit
}

extern def bar() at {io,async}: Unit =
  js { do foo() } // ERROR Effect Foo is not allowed in this context
  default { () }